--- a/css/sampletask10/style.css
+++ b/css/sampletask10/style.css
@@ -3,6 +3,19 @@
     padding: 0px;
     
     }
+    
+
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+    p{
+        font-family: "Roboto", sans-serif;
+
+    }
+    .roboto-thin {
+        font-family: "Roboto", sans-serif;
+        font-weight: 100;
+        font-style: normal;
+    }
 
     .nav{
 
@@ -20,7 +33,7 @@
     }
     .image{
         display: flex;
-        gap: 20px;
+        /* margin-left: 10px; */
         padding: 10px;
         /* max-width: 70%; */
         /* max-height: 50%;  */
@@ -40,6 +53,7 @@
         background-color: black;
         color:white ;
         flex: 1;
+        margin-left: 30px;
         min-width: 30%;
         padding:20px;
     }
@@ -94,7 +108,7 @@
     .second{
         display:flex
     }
-    .sec1{
+    .sec1 {
         display:flex;
         flex:1;
         padding:10px;
