--- a/css/samplework11/style.css
+++ b/css/samplework11/style.css
@@ -5,10 +5,79 @@
 
 body {
     background-color: rgb(150, 228, 198);
+    
+}
+.main{
+    max-width: 375px;
+    margin-left:430px;
+    margin-top: 100px;
+    padding:20px;
+    min-height: 300px;
+    background-color: aliceblue;
+    border-radius: 2%;
+}
+/* name */
+.c1{
+    display:flex;
+    margin-top: 10px;
+    
+    
+}
+.c11{
+    flex:1;
+    margin:10px;
+}
+.c22{
+    flex:2.5;
+    margin:10px;
+}
+/* email */
+.c2{
+    margin: 10px;
+}
+.email{
+    min-width: 355px;
 }
 
-.main{
-    background-color: aliceblue;
-    margin:50px;
-padding: 250px,;
+/* checkbox */
+.c3{
+    margin-top:10px;
+    margin-left: 10px;
 }
+.c31{
+    margin: 10px;
+    border-style: solid;
+    border-color: black;
+}
+
+.c4{
+    display: flex;
+    
+    /* background-color: rgb(255, 136, 127); */
+}
+/* message */
+.c5{
+    margin:10px;
+}
+.message{
+    min-width:355px;
+    min-height:50px;
+}
+/* checkbox2 */
+.c6{
+    margin:10px;
+}
+/* button */
+.c7{
+    margin:10px;
+}
+button{
+    min-width: 355px;
+    min-height: 30px;
+    color: rgb(255, 255, 255);
+    background-color: green;
+}
+
+
+
+
