--- a/css/samplework11/style.css
+++ b/css/samplework11/style.css
@@ -1,81 +1,123 @@
-*{
-    padding: 0;
-    margin:0;
+* {
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body {
-    background-color: rgb(150, 228, 198);
-    
-}
-.main{
-    max-width: 375px;
-    margin-left:430px;
-    margin-top: 100px;
-    padding:20px;
-    min-height: 300px;
-    background-color: aliceblue;
-    border-radius: 2%;
-}
-/* name */
-.c1{
-    display:flex;
-    margin-top: 10px;
-    
-    
-}
-.c11{
-    flex:1;
-    margin:10px;
-}
-.c22{
-    flex:2.5;
-    margin:10px;
-}
-/* email */
-.c2{
-    margin: 10px;
-}
-.email{
-    min-width: 355px;
-}
-
-/* checkbox */
-.c3{
-    margin-top:10px;
-    margin-left: 10px;
-}
-.c31{
-    margin: 10px;
-    border-style: solid;
-    border-color: black;
-}
-
-.c4{
+.container {
+    background-color: rgb(194, 233, 220);
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    
-    /* background-color: rgb(255, 136, 127); */
+    justify-content: center;
+    align-items: center;
 }
-/* message */
-.c5{
-    margin:10px;
+
+.container1 {
+    background-color: white;
+    width: 40%;
+    padding: 30px;
+    border-radius: 20px;
 }
-.message{
-    min-width:355px;
-    min-height:50px;
+
+.child1 {
+    font-family: Arial, Helvetica, sans-serif;
 }
-/* checkbox2 */
-.c6{
-    margin:10px;
+
+.child2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
 }
-/* button */
-.c7{
-    margin:10px;
+
+.gchild1, .gchild2 {
+    width: 48%;
+    font-size: small;
+    color: gray;
 }
-button{
-    min-width: 355px;
-    min-height: 30px;
-    color: rgb(255, 255, 255);
-    background-color: green;
+
+.child2 input {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 5px;
+    height: 35px;
+}
+
+.child3 {
+    color: gray;
+    font-size: small;
+    margin-top: 30px;
+}
+
+.child3 input {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 5px;
+    height: 35px;
+  }
+  
+  .child4 {
+    margin-top: 30px;
+  }
+  
+  .child4 p {
+    color: gray;
+    font-size: small;
+    margin-bottom: 10px;
+  }
+  
+  .child5 {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .gchild51, .gchild52 {
+    width: 48%;
+    border: 1px solid gray;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 35px;
+  }
+  
+  .child6 {
+    color: gray;
+    font-size: small;
+    margin-top: 30px;
+  }
+  
+  .child6 textarea {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 5px;
+    height: 100px;
+    resize: none;
+  }
+  
+  .child7 {
+    margin-top: 30px;
+    font-size: small;
+    color: gray;
+  }
+  
+  .child7 label {
+    margin-left: 10px; 
+  }
+  
+  .btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  
+  .btn button {
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgb(29, 126, 92);
+    color: white;
+    border: none;
+    cursor:pointer;
 }
 
 
