--- a/css/sampletask12/style.css
+++ b/css/sampletask12/style.css
@@ -42,21 +42,21 @@
 }
 
 .heading1 h3{
-    /* padding: 30px 40px; */
+    padding: 5px 10px;
     letter-spacing: 5px;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
 }
 
 .heading2 h1{
-    /* padding:  0px 90px 0px 40px; */
+    padding:  0px 15px 0px 15px;
     font-size: 38px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 1000;
 }
 
 .para p{
-    /* padding: 30px 100px 20px 40px; */
+    padding: 30px 10px 20px 40px;
     font-size: 18px;
     word-spacing: 5px;
     font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -66,7 +66,7 @@
 
 .price{
     display: flex;
-    /* padding: 20px 40px; */
+    padding: 20px 40px;
     align-items: center;
 }
 
@@ -90,7 +90,7 @@
 }
 
 button {
-    /* padding: 10px 20px; */
+    padding: 10px 20px;
     width: 300px;
     height: 60px;
     font-size: 16px;
