--- a/css/sampletask10/style.css
+++ b/css/sampletask10/style.css
@@ -31,10 +31,14 @@
     span{
         margin: 10px;
     }
+    .left1{
+width: 70%;
+    }
     .image{
         display: flex;
         /* margin-left: 10px; */
         padding: 10px;
+        flex-wrap: wrap;
         /* max-width: 70%; */
         /* max-height: 50%;  */
         flex: 2;
@@ -54,7 +58,7 @@
         color:white ;
         flex: 1;
         margin-left: 30px;
-        min-width: 30%;
+        width: 30%;
         padding:20px;
     }
 
@@ -121,3 +125,21 @@
         padding:10px;
     }
     
+    
+@media (min-width:276) and (max-width:767){
+    .left1{
+        width: 100%;
+    }
+    .right1{
+        width: 100%;
+    }
+}
+
+@media (min-width:770) and (max-width:900){
+    .left1{
+        width: 60%;
+    }
+    .right1{
+        width: 40%;
+    }
+}
