--- a/css/puma/style.css
+++ b/css/puma/style.css
@@ -2,202 +2,271 @@
   padding: 0;
   margin: 0;
 }
-body{
-    background-color:black;
-}
-.abovenovbar{
-    text-align: center;
-    height:20px;
-    padding:10px;
-    color:white;
-    background-color: rgb(186, 117, 56);
-    font-family: "Roboto", sans-serif;
-
+body {
+  background-color: black;
 }
 
- /* navbar */
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-.nav{
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    position: sticky;
-    top: 0; 
-    
-}
-.left{
-    /* align-items: center; */
-    margin:10px 30px 10px 30px;
-    justify-content: space-between;
-}
-.img1{
-    height:40px;
-    width: 40px;
-    margin: 10px;
-}
+        
 
 
-.middle{
-    margin:30px 0px 30px 0px;
+.abovenovbar {
+  text-align: center;
+  height: 20px;
+  padding: 10px;
+  color: white;
+  background-color: rgb(186, 117, 56);
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-span{
-    margin:10px;
-    color: white;
-    font-family: "Roboto", sans-serif;
+/* navbar */
+.nav {
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.left {
+  /* align-items: center; */
+  margin: 10px 20px 10px 30px;
+  justify-content: space-between;
+}
+.img1 {
+  height: 40px;
+  width: 40px;
+  margin: 10px;
+}
 
-}
-.right{
-    margin: 20px;
-}
-.image1{
-    margin-left: 20px;
+.middle {
+  margin: 30px 0px 30px 0px;
 }
 
-    
+span {
+  margin: 10px;
+  color: white;
+}
+.right {
+  margin: 20px;
+}
+.image1 {
+  margin-left: 20px;
+}
+
 .search-button {
-    background-color: black;
-    width: 150px;
-    height:40px;
-    color: white;
-    border-style: solid;
-    border-color: grey;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    gap: 5px; 
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 1; 
-    margin-left: 40px;
-
+  background-color: black;
+  width: 150px;
+  height: 40px;
+  color: white;
+  border-style: solid;
+  border-color: grey;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 16px;
+  line-height: 1;
+  margin-left: 40px;
+  font-family: "Roboto Condensed", sans-serif;
+  transition: 0.5s;
+}
+.search-button:hover{
+    color: black;
+    background-color: rgb(254, 254, 254);
 }
 
 .search-icon {
-    margin-left: 10px;
-    width: 20px; 
-    height: 20px;
-    display: block; 
-    
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+  display: block;
 }
 /* ------navbar------ */
-.main1{
-    background-color: rgb(131, 104, 239);
-    height: 70px;
+.main1 {
+  background-color: rgb(131, 104, 239);
+  height: 70px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-.m1t1{
-    padding-top:20px;
-    text-align: center;
-    color:white;
-    font-family: "Roboto", sans-serif;
+.m1t1 {
+  padding-top: 20px;
+  text-align: center;
+  color: white;
+ 
 }
-.m1t2{
-    text-align: center;
-    color:white;
-    font-family: "Roboto", sans-serif;
+.m1t2 {
+  text-align: center;
+  color: white;
+
 }
 /* section1 */
-.body2{
-    background-color: rgb(170, 216, 230);
-    height:400px;
-    display: flex;
+.body2 {
+  background-color: rgb(142, 227, 244);
+  height: 400px;
+  display: flex;
+  position: relative;
+  justify-content: end;
+  font-family: "Roboto Condensed", sans-serif;
 }
-.body2img{
-    width:100%;
-    height:100%;
-    object-fit:scale-down;    
+.body2img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.body21{
-    flex:1;
 
-}
-.body22{
-    flex:1;
-    
-}
-.body23{
-    flex: 1;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-family: "Roboto Condensed", sans-serif;
-    margin-top:150px;
-    font-size: 30px;
-}
-.body2buttons1{
-    margin: 10px;
-    width:100px;
-    height: 60px;
-    color:rgb(255, 255, 255);
-    background-color: rgb(4, 4, 4);
-    border:solid black;
-    font-family: "Roboto Condensed", sans-serif;
-    cursor: pointer;
+.body23 {
+  position: absolute;
 
+  margin-right: 10px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-top: 130px;
+  font-size: 50px;
+}
+.body2buttons1 {
+  margin: 5px;
+  width: 120px;
+  height: 40px;
+  color: black;
+  background-color: white;
+  border: solid white;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.body2buttons1:hover {
+  background-color: black;
+  color: white;
+  border-color: black;
 }
 /* section2 */
-.section2{
-    margin-top: 10px;
-    display: flex;
-    height: 800px;
-    gap: 20px;
-    text-align: center;
+.section2 {
+  margin-top: 10px;
+  display: flex;
+  height: 800px;
+  gap: 20px;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
 }
-.section21{
-    width:50%;
-    background-color: rgb(255, 255, 255);   
-    font-family: "Roboto Condensed", sans-serif; 
+.section21 {
+  width: 50%;
+  background-color: rgb(255, 255, 255);
 }
-.section22{
-    width:50%;
-    background-color: rgb(255, 255, 255);
-    font-family: "Roboto Condensed", sans-serif;
+.section22 {
+  width: 50%;
+  background-color: rgb(255, 255, 255);
 }
-.section2img{
-    width:100%;
-    height:80%;
-    
+.section2img {
+  width: 100%;
+  height: 80%;
 }
-.section2but{
-    color: white;
-    background-color: black;
-    font-family: "Roboto Condensed", sans-serif;
-    width: 100px;
-    height:30px;
-    margin: 10px;
-    cursor: pointer;
-    border:solid black;
-    cursor: pointer;
+.section2but {
+  color: white;
+  background-color: black;
+  width: 100px;
+  height: 30px;
+  margin: 10px;
+  cursor: pointer;
+  border: solid black;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.section2but:hover{
+    color:black;
+    background-color: white;
 }
 /* section3 */
-.section3{
-    display: flex;
-    height:450px;
-    margin-top: 10px;
+.section3 {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  margin-top: 10px;
+  font-family: "Roboto Condensed", sans-serif;
 }
-.sec31{
-    width:70%;
-    background-color: rgb(46, 55, 55);
+.sec31 {
+  width: 70%;
+  background-color: rgb(46, 55, 55);
+  flex: 2;
 }
-.sec32{
-    background-color: rgb(233, 224, 208);
-    width:30%;
-    font-family: "Roboto Condensed", sans-serif;
-    text-align: center;
-    padding: 170px 30px 120px 90px;
-    
+.sec32 {
+  background-color: rgb(233, 224, 208);
+  width: 30%;
+  flex: 1;
+  text-align: center;
+  padding: 170px 30px 120px 90px;
+  /* padding: 30px 10px; */
 }
-.sec3img{
-    width:100%;
-    height:100%;
+.sec3img {
+  width: 100%;
+  height: 100%;
 }
-.sec3but{
-    color: white;
-    background-color:black; 
-    margin:5px;
-    width: 150px;
-    height:40px;
-    border:solid black;
-    cursor: pointer;
+.sec3but {
+  color: rgb(255, 255, 255);
+  background-color: black;
+  margin: 5px;
+  width: 150px;
+  height: 40px;
+  border: solid black;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.sec3but:hover{
+    color: black;
+    background-color: white;
+}
+
+/* section4 */
+.section4 {
+  margin-top: 10px;
+  display: flex;
+  overflow-y: hidden;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 14px;
+}
+.sec41 {
+  min-width: 250px;
+  height: 350px;
+  background-color: rgb(255, 255, 255);
+  margin-left: 30px;
+  transition: 0.6s;
+}
+.sec4img {
+  width: 100%;
+  height: 250px;
+}
+.sec41:hover{
+  transform: scale(1.1);
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 54px 55px, rgba(255, 255, 255, 0.12) 0px -12px 30px, rgba(255, 255, 255, 0.12) 0px 4px 6px, rgba(255, 255, 255, 0.17) 0px 12px 13px, rgba(255, 255, 255, 0.09) 0px -3px 5px;
+}
+.sec4div {
+  display: flex;
+}
+.sec41left {
+  display: absolute;
+  /* background-color: aqua; */
+  max-width: 200px;
+  margin-left: 10px;
+  /* color: white; */
+}
+.sec41right {
+  text-align: center;
+  margin-top: 4px;
+  margin-left:5px;
+  /* color: white; */
+}
+
+::-webkit-scrollbar{
+  width: 8px;
+  height: 6px;
+}
+::-webkit-scrollbar-track{
+  background-color: rgb(201, 197, 197);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgb(87, 84, 84);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: black;
 }
