--- a/css/puma/style.css
+++ b/css/puma/style.css
@@ -243,16 +243,13 @@ span {
 }
 .sec41left {
   display: absolute;
-  /* background-color: aqua; */
   max-width: 200px;
   margin-left: 10px;
-  /* color: white; */
 }
 .sec41right {
   text-align: center;
   margin-top: 4px;
   margin-left:5px;
-  /* color: white; */
 }
 
 ::-webkit-scrollbar{
@@ -270,3 +267,95 @@ span {
 ::-webkit-scrollbar-thumb:hover{
   background-color: black;
 }
+/* section5 */
+.section5{
+            margin-top: 20px;
+            width: 100%;
+            height:20vh;
+            font-family: "Roboto Condensed", sans-serif;
+        }
+        .sec51{
+          position: absolute;
+          top: 350;
+          margin-top: 250px;
+          margin-left: 20PX;
+          left:20;
+          background-color: aqua;
+          width:98vh;
+          height:60vh;
+          z-index: -1;
+      }
+      .sec52{
+          position: absolute;
+          top:40;
+          left:600px;
+          background-color:blue;
+          width: 100vh;
+          height: 110vh;
+          z-index: -2;
+          
+      }
+      .sec53{
+          position: absolute;
+          top:60;
+          left: 0;
+          z-index: -3;
+          background-color: rgb(77, 75, 75);
+          width:100%;
+          height: 80vh;
+          margin-top: 40px;
+      }
+      .sec5img{
+          width: 100%;
+          height: 100%;
+      }
+      .sec5text1{
+          margin-left: 20px;
+          color: white;
+          margin-top:40px;
+      }
+      .sec5text2{
+          position: absolute;
+          top: 60;
+          margin-left: 20px;
+          margin-top: 5px;
+          left: 20;
+          color: white;
+      }
+      .sec5but1{
+          position: absolute;
+          top:120;
+          margin-top: 50px;
+          margin-left: 20px;
+          height: 50px;
+          width:150px;
+          left: 20;
+          border: none;
+          background-color: white;
+          color: black;
+          transition: 0.5s;
+      }
+      .sec5but2{
+          position: absolute;
+          top:120;
+          margin-top: 50px;
+          margin-left: 190px;
+          height:50px;
+          width:150px;
+          border: none;
+          background-color: white;
+          color: black;
+          transition: 0.5s;
+          left: 200;
+      }
+      .sec5but2:hover{
+          background-color: black;
+          color:white;
+      }
+      .sec5but1:hover{
+          background-color: black;
+          color:white;
+      }
+
+
+
