--- a/css/puma/style.css
+++ b/css/puma/style.css
@@ -269,92 +269,90 @@ span {
   background-color: rgb(46, 41, 41);
 }
 /* section5 */
-.section5 {
-  margin-top: 20px;
+.section5{
   width: 100%;
-  height: 20vh;
-  font-family: "Roboto Condensed", sans-serif;
+  height:10vh;
+  /* background-color: aqua; */
+  margin-top: 30px;
 }
-.sec51 {
+.sec53{
   position: absolute;
-  top: 350;
-  margin-top: 250px;
-  margin-left: 20px;
-  left: 20;
-  background-color: aqua;
-  width: 98vh;
-  height: 60vh;
-  z-index: -1;
-}
-.sec52 {
-  position: absolute;
-  top: 40;
-  left: 600px;
-  background-color: blue;
-  width: 100vh;
-  height: 110vh;
-  z-index: -2;
-}
-.sec53 {
-  position: absolute;
-  top: 60;
-  left: 0;
+  background-color: rgb(42, 42, 40);
   z-index: -3;
-  background-color: rgb(77, 75, 75);
-  width: 100%;
-  height: 80vh;
+  width:100%;
+  height:80%;
+  top:20;
   margin-top: 40px;
 }
-.sec5img {
+.sec51{
+  background-color: aqua;
+  z-index: -1;
+  position: absolute;
+  top:20;
+  left: 5%;
+  width:45%;
+  height:55%;
+  margin-top: 35vh;
+}
+.sec52{
+  background-color:blueviolet ;
+  position: absolute;
+  z-index: -2;
+  width: 50%;
+  height:100%;
+  left: 48%;
+  top:10;
+}
+.sec5img{
   width: 100%;
   height: 100%;
 }
 .sec5text1 {
-  margin-left: 20px;
-  color: white;
-  margin-top: 40px;
+margin-left: 5%;
+color: white;
+margin-top: 1%;
 }
 .sec5text2 {
-  position: absolute;
-  top: 60;
-  margin-left: 20px;
-  margin-top: 5px;
-  left: 20;
-  color: white;
+position: absolute;
+top: 60;
+margin-left: 5%;
+margin-top: 5px;
+left: 20;
+color: white;
 }
 .sec5but1 {
-  position: absolute;
-  top: 120;
-  margin-top: 50px;
-  margin-left: 20px;
-  height: 50px;
-  width: 150px;
-  left: 20;
-  border: none;
-  background-color: white;
-  color: black;
-  transition: 0.5s;
+position: absolute;
+top: 120;
+margin-top: 50px;
+margin-left: 5%;
+height: 50px;
+width: 150px;
+left: 20;
+border: none;
+background-color: white;
+color: black;
+transition: 0.5s;
 }
 .sec5but2 {
-  position: absolute;
-  top: 120;
-  margin-top: 50px;
-  margin-left: 190px;
-  height: 50px;
-  width: 150px;
-  border: none;
-  background-color: white;
-  color: black;
-  transition: 0.5s;
-  left: 200;
+position: absolute;
+top: 120;
+margin-top: 50px;
+margin-left: 18%;
+height: 50px;
+width: 150px;
+border: none;
+background-color: white;
+color: black;
+transition: 0.5s;
+left: 200;
 }
 .sec5but2:hover {
-  background-color: black;
-  color: white;
+background-color: black;
+color: white;
 }
 .sec5but1:hover {
-  background-color: black;
-  color: white;
+background-color: black;
+color: white;
 }
 /* footer */
 .footer {
