--- a/css/weekly_task/book_my_show/style.css
+++ b/css/weekly_task/book_my_show/style.css
@@ -1,3 +1,4 @@
+/* navbar1 */
 nav{
     background-color: rgb(255, 255, 255)no-repeat left center;
     width: 100%;
@@ -67,4 +68,22 @@ nav img{
 }
 .navright2{
     margin-right: 20px;
+}
+/* navbar2 */
+.nav2{
+    background-color: aliceblue; 
+    display: flex;
+    height: 40px;
+}
+.nav2left span{
+    margin-left: 20px;
+}
+.nav2left{
+    margin-top: 10px;
+}
+.nav2right span{
+    margin-right: 20px;
+}
+.nav2right{
+    margin-top: 10px;
 }
