--- a/css/weekly_task/book_my_show/style.css
+++ b/css/weekly_task/book_my_show/style.css
@@ -1,10 +1,12 @@
 /* navbar1 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 nav{
     background-color: rgb(255, 255, 255)no-repeat left center;
     width: 100%;
     height:50px;
     justify-content: space-between;
     display: flex;
+    font-family: "Roboto Condensed", sans-serif;
 }
 nav img{
     width: 8vw;
@@ -40,6 +42,7 @@ nav img{
     width: 100%;
     padding: 10px 10px 10px 40px; 
     font-size: 16px; 
+    font-family: "Roboto Condensed", sans-serif;
 }
 .navbut1{
     background-color: white;
@@ -74,6 +77,7 @@ nav img{
     background-color: aliceblue; 
     display: flex;
     height: 40px;
+    font-family: "Roboto Condensed", sans-serif;
 }
 .nav2left span{
     margin-left: 20px;
@@ -86,4 +90,104 @@ nav img{
 }
 .nav2right{
     margin-top: 10px;
+}
+/* section1 */
+.section1 {
+    display: flex;
+    overflow-y: hidden;
+    background-color:aliceblue;
+    gap:10px;
+    font-family: "Roboto Condensed", sans-serif;
+  }
+  .section1 div {
+    min-width: 100%;
+    height: 40vh;
+    background-color: aquamarine;
+    object-fit: scale-down;
+  }
+  .section1 img {
+    width: 100%;
+    height: 100%;
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 6px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgb(201, 197, 197);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(87, 84, 84);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(46, 41, 41);
+  }
+  /* section2 */
+  .section2{
+    display: flex;
+    justify-content: space-between;
+    font-family: "Roboto Condensed", sans-serif;
+}
+.sec2left{
+    background-color: rgb(255, 255, 255);
+    height:30px;
+    margin-left: 30px;
+    color: rgb(57, 56, 56);
+    font-size: 20px;
+}
+.sec2right{
+    background-color: rgb(255, 255, 255);
+    height:30px;
+    margin-right: 30px;
+    color: red;
+    
+}
+.section2cards{
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-left: 30px;
+    width: 98%;
+    
+}
+.section2cards div{
+    background-color: rgb(0, 0, 0);
+    width:17.5%;
+    height:60vh;
+    border-radius: 2%;
+}
+.section2cards img{
+    width: 100%;
+    height:90%;
+    border-top-left-radius:2%;
+    border-top-right-radius:2%;
+}
+.sec2star{
+   max-width:25px;
+    max-height:25px;
+    margin-left: 10px;
+    /* margin-top: 10px; */
+}
+.sec2card span{
+    color:white;
+    position: relative;
+    top:-3px;
+    left: 10px;
+    
+}
+@media  (max-width:867px){
+    .section2cards div{
+    min-width:42.5%;
+    max-width: 42.5%;
+    
+    }
+}
+@media(min-width:868px) and (max-width:1200px){
+    .section2cards div{
+    min-width:30%;
+    max-width: 30%;   
+}
 }
