--- a/css/weekly_task/book_my_show/style.css
+++ b/css/weekly_task/book_my_show/style.css
@@ -1,3 +1,4 @@
+
 /* navbar1 */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 nav{
@@ -128,7 +129,6 @@ nav img{
   .section2{
     display: flex;
     justify-content: space-between;
-    font-family: "Roboto Condensed", sans-serif;
 }
 .sec2left{
     background-color: rgb(255, 255, 255);
@@ -149,7 +149,8 @@ nav img{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+
     width: 98%;
     
 }
@@ -158,12 +159,18 @@ nav img{
     width:17.5%;
     height:60vh;
     border-radius: 2%;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.section2cards div:hover{
+    transform: scale(0.9);
 }
 .section2cards img{
     width: 100%;
     height:90%;
     border-top-left-radius:2%;
     border-top-right-radius:2%;
+    
 }
 .sec2star{
    max-width:25px;
