--- a/css/weekly_task/book_my_show/style.css
+++ b/css/weekly_task/book_my_show/style.css
@@ -1,13 +1,15 @@
 
 /* navbar1 */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 nav{
     background-color: rgb(255, 255, 255)no-repeat left center;
     width: 100%;
     height:50px;
     justify-content: space-between;
     display: flex;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
 }
 nav img{
     width: 8vw;
@@ -43,7 +45,8 @@ nav img{
     width: 100%;
     padding: 10px 10px 10px 40px; 
     font-size: 16px; 
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
+    border: 1px solid grey;
 }
 .navbut1{
     background-color: white;
@@ -78,7 +81,7 @@ nav img{
     background-color: aliceblue; 
     display: flex;
     height: 40px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
 }
 .nav2left span{
     margin-left: 20px;
@@ -98,7 +101,7 @@ nav img{
     overflow-y: hidden;
     background-color:aliceblue;
     gap:10px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
   }
   .section1 div {
     min-width: 100%;
@@ -129,6 +132,7 @@ nav img{
   .section2{
     display: flex;
     justify-content: space-between;
+    font-family: "Nunito Sans", sans-serif;
 }
 .sec2left{
     background-color: rgb(255, 255, 255);
@@ -144,57 +148,288 @@ nav img{
     color: red;
     
 }
-.section2cards{
+.section2c{
+    display: flex;
+    /* background-color: aqua; */
+    width: 100%;
+    height:60vh;
+    /* flex-wrap: wrap; */
+    margin-top: 20px;
+    font-family: "Nunito Sans", sans-serif;
+}
+.sec2divc{
+    width:17%;
+    background-color: rgb(255, 255, 255);
+    margin-left: 30px;
+}
+.sec2img{
+    width: 100%;
+    height:80%;
+    background-color: azure;
+}
+.sec2img img{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+}
+.sec2name{
+    width: 100%;
+    height:7%;
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    border-bottom-left-radius:5% ;
+    border-bottom-right-radius:5% ;
+}
+.sec2dis{
+    background-color: white;
+    color: rgb(57, 57, 57);
+    margin-top: 10px;
+}
+/* section3 */
+.sec31{
+    background-image:linear-gradient(to right,rgb(255, 255, 255),rgb(0, 0, 0));
+    width: 95%;
+    height:15vh;
+    border-radius:2%;
+    margin-left: 30px;
+    object-fit: cover;
+    margin-top: 12vh;
+    font-family: "Nunito Sans", sans-serif;
+}
+.sec31 img{
+    width:10vw;
+    height:10vh;
+    margin-left: 11vw;
+}
+.sec31 span{
+    position: absolute;
+    top: 145vh;
+    left:13vw;
+    color: rgb(89, 87, 87);
+    font-size: 35px;
+}
+.sec31 p{
+    position: absolute;
+    left:35vw;
+    top: 137vh;
+    font-size: 30px;
+    color: rgb(241, 234, 25);
+}
+.sec32{
+    background-color: rgb(255, 255, 255);
+    width:95%;
+    height:15vh;
+    margin-left:30px;
+}
+.sec32 span{
+    position: absolute;
+    top: 160vh;
+    font-size: 25px;
+    font-family: "Nunito Sans", sans-serif;
+}
+.sec33{
+    height: 30vh;
+    width: 95%;
+    background-color: rgb(255, 255, 255);
+    margin-left: 30px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    gap:42px
+}
+.sec33c{
+    width:17%;
+    background-color: bisque;
+    height: 100%;
+    border-radius: 5%;
+}
+.sec33c img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5%;
+}
+/* section4 */
+.section4 {
+    width: 100%;
+    height: auto;
+    background-color: rgb(26, 46, 61);
+    margin-top: 20px;
+    font-family: "Nunito Sans", sans-serif;
+  }
+
+  .sec41 img {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .sec41 {
+    display: flex;
+    background-color: rgb(26, 46, 61);
+  }
+  .sec41head2 {
+    margin-top: 5px;
+  }
+  ul {
+    list-style-type: none;
+    padding: 2px;
+    color: white;
+  }
+  .sec4li1 {
+    font-size: 20px;
+  }
+  .sec42 {
+    background-color: rgb(26, 46, 61);
+    margin-left: 20px;
     margin-top: 20px;
     display: flex;
+    justify-content: space-between;
+    margin-right: 20px;
+    color: white;
+  }
+  .sec42right {
+    margin-top: 40px;
+  }
+  .sec43 {
+    height: 60vh;
+    background-color: rgb(26, 46, 61);
+    width: 95%;
+    gap: 12px;
+    margin-left: 20px;
+    display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-    /* margin-left: 30px; */
-
-    width: 98%;
-    
-}
-.section2cards div{
-    background-color: rgb(0, 0, 0);
-    width:17.5%;
-    height:60vh;
-    border-radius: 2%;
-    transition: 1s;
-    cursor: pointer;
-}
-.section2cards div:hover{
-    transform: scale(0.9);
-}
-.section2cards img{
+  }
+  .sec43c {
+    width: 19%;
+    height: 100%;
+    background-color: rgb(26, 46, 61);
+  }
+  .sec43img {
     width: 100%;
-    height:90%;
-    border-top-left-radius:2%;
-    border-top-right-radius:2%;
-    
+    height: 85%;
+    background-color: rgb(26, 46, 61);
+  }
+  .sec43img img {
+    width: 100%;
+    height: 100%;
+  }
+  li {
+    list-style-type: none;
+    padding: 2px;
+    color: white;
+  }
+  .footer {
+    background-color: #222;
+    color: #fff;
+    padding: 40px 0;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin-top: 40px;
 }
-.sec2star{
-   max-width:25px;
-    max-height:25px;
-    margin-left: 10px;
-    /* margin-top: 10px; */
+
+.footer-container {
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 20px;
 }
-.sec2card span{
-    color:white;
-    position: relative;
-    top:-3px;
-    left: 10px;
-    
+
+.footer-section {
+    flex: 1;
+    min-width: 200px;
+    margin-bottom: 20px;
 }
-@media  (max-width:867px){
-    .section2cards div{
-    min-width:42.5%;
-    max-width: 42.5%;
-    
+
+.footer-section h2, 
+.footer-section h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.footer-section p,
+.footer-section a {
+    font-size: 16px;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+}
+
+.footer-section a:hover {
+    text-decoration: underline;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 10px;
+}
+
+.footer-legal {
+    margin-top: 20px;
+    border-top: 1px solid #444;
+    padding-top: 20px;
+}
+
+.footer-legal a {
+    color: #aaa;
+    text-decoration: none;
+    margin: 0 20px;
+}
+
+.footer-legal a:hover {
+    text-decoration: underline;
+}
+
+.footer-copyright {
+    margin-top: 10px;
+    color:#aaa;
+}
+/* @media  (max-width:867px){
+.sec33c{
+    min-width:45%;
+    max-width:45%;
+}
+.sec31{
+    margin-top: 23vh;
+}
+.sec31 p{
+    margin-top: 10vh;
+}
+.sec31 span{
+    margin-top: 9vh;
+}
+}
+@media(min-width:868px) and (max-width:1000px){
+.sec31{
+    margin-top: 35vh;
+}
+.sec31 p{
+    margin-top: 23vh;
+}
+.sec31 span{
+    margin-top: 21vh;
+}
+.sec32 span{
+    margin-top:20vh;
+}
+}
+@media(min-width:1018px) and (max-width:1100px){
+    .sec31{
+        margin-top: 35vh;
     }
-}
-@media(min-width:868px) and (max-width:1200px){
-    .section2cards div{
-    min-width:30%;
-    max-width: 30%;   
-}
-}
+    .sec31 p{
+        margin-top: 23vh;
+    }
+    .sec31 span{
+        margin-top: 21vh;
+    }
+    .sec32 span{
+        margin-top:20vh;
+    }
+    } */
