--- a/css/weekly_task/book_my_show/style.css
+++ b/css/weekly_task/book_my_show/style.css
@@ -1,6 +1,5 @@
 
 /* navbar1 */
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 nav{
@@ -60,7 +59,7 @@ nav img{
     background-color: rgb(255, 0, 0);
     color: white;
     border:1px solid red;
-    border-radius: 10%;
+    border-radius: 10px;
     cursor: pointer;
     width: 6vw;
     height:30px;
@@ -193,7 +192,7 @@ nav img{
     background-image:linear-gradient(to right,rgb(255, 255, 255),rgb(0, 0, 0));
     width: 95%;
     height:15vh;
-    border-radius:2%;
+    border-radius:15px;
     margin-left: 30px;
     object-fit: cover;
     margin-top: 12vh;
@@ -243,12 +242,12 @@ nav img{
     width:17%;
     background-color: bisque;
     height: 100%;
-    border-radius: 5%;
+    border-radius: 5px;
 }
 .sec33c img{
     width: 100%;
     height: 100%;
-    border-radius: 5%;
+    border-radius: 5px;
 }
 /* section4 */
 .section4 {
