--- a/weekly_task/alen_solly/css/style.css
+++ b/weekly_task/alen_solly/css/style.css
@@ -25,14 +25,14 @@
 }
 .li1{
     position:absolute;
-    left: 10vw;
+    left: 12vw;
     top:5px;
     list-style-type: none;
     font-size: 10px;
 }
 .li2{
     position:absolute;
-    left: 10vw;
+    left: 12vw;
     top:16px;
     list-style-type: none;
     font-size: 11px;
@@ -71,7 +71,7 @@
     margin-right:20px ;
 }
 .div5{
-    margin-right: 20px;
+    margin-right: 15px;
 }
 /* navbar2 */
 nav{
@@ -80,6 +80,9 @@ nav{
     display: flex;
     width: 100%;
     font-family: "Noto Sans", sans-serif;
+    position:sticky;
+    top:0;
+    z-index: 1;
 }
 .navlogo{
     height:12vh;
@@ -94,10 +97,13 @@ nav{
     align-items: center;
     font-size: 13px;
 }
-nav li{
-    margin-left: 20px;
+.navli1{
+    margin-left: 13px;
+    margin-top: 20px;
 }
 .saletag{
+    margin-left: 13px;
+    margin-top: 20px;
     color: red;
 }
 .navsearch-container {
@@ -162,18 +168,94 @@ left:10px;
 .navimg2{
     margin-left: 20px;
 }
-/* container1 */
+.container1dis{
+    text-align: center;
+}
+/* container2 */
 .carousel-item img {
     height: 70vh; /* Adjust the height as needed */
     object-fit: cover; /* Ensure images fill the area without distortion */
     width: 100%;
 }
+.container2{
+ background-color: rgb(255, 255, 255);
+ width:100%;
+ height:auto;
+ display: flex;
+    flex-wrap: wrap;
+    gap:10px;
+    margin-top:10vh;
+    margin-bottom: 10vh;
+}
+.container2divs{
+    width:13vw;
+    height:28vh;
+    background-color: rgb(127, 123, 123);
+    margin-left: 30px;
+    border-radius: 360px;
+}
+.container2divs img{
+    width: 100%;
+    height: 100%;
+    border-radius:360px ;
+}
+/* container3 */
+.container3{
+    height: auto;
+    background-color: #F5E7A2;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.container3divs1{
+    width: 40vw;
+    background-color: #F5E7A2;
+    margin:30px 0px 30px 70px;
+}
+.ctnr3div1img{
+    width:8vw;
+    height:30px;
+    background-color: antiquewhite;
+    border-radius: 5px;
+}
+.ctnr3div1child{
+    display: flex;
+    gap:20px;
+    justify-content: center;
+    align-items: center;
+}
+.ctnr3div1img img{
+    width: 100%;
+    height:100%;
+    border-radius: 5px;
+}
+.container3divs2{
+    background-color: bisque;
+    width:13vw;
+    height:30vh;
+    margin-left: 30px;
+}
+.container3divs2 img{
+    width: 100%;
+    height:100%;
+}
+.container3divs3{
+    width:25vw;
+    background-color: aqua;
+    height:30vh;
+    margin-left: 50px;
+}
+.container3divs3 img{
+    width:100%;
+    height:100%;
+}
+
 @media  (max-width:467px){
     nav{
         height:auto;
         display:list-item;
     }
-    nav li{
+    .navli1{
         margin-left: 10px;
     }
     .navimg2{
@@ -202,24 +284,29 @@ left:10px;
         object-fit: cover; /* Ensure images fill the area without distortion */
         width: 100%;
     }
+    .container2divs{
+        width:15vw;
+        height:10vh;
+        margin:10px
+    }
 
-}
-@media  (min-width:470) and (max-width:967px){
-    
 }
 @media(min-width:470px) and (max-width:867px){
     nav{
         height:auto;
         display:list-item;
+        position: inherit;
+        
     }
-    nav li{
+    .navli1{
         margin-left: 30px;
     }
     .navimg2{
-        width:10px;
+        width:70px;
+        height: 100px;
     }
     .button1 span{
-        font-size: 7px;
+        font-size: 5px;
     }
     .button1 img{
         margin-top: 10px;
@@ -228,8 +315,8 @@ left:10px;
     left:10px;
     }
     .button1 li{
-        margin-left: 20px;
-        font-size: 6px;
+        margin-left: 50px;
+        font-size: 7px;
     }
     .button1{
         min-width:20vw;
@@ -245,6 +332,12 @@ left:10px;
         width:10vw;
         margin-left:0px;
     }
+    .container2divs{
+        width:20vw;
+        height:22vh;
+        margin:10px
+    }
+
     }
 
 
