--- a/weekly_task/alen_solly/css/style.css
+++ b/weekly_task/alen_solly/css/style.css
@@ -184,8 +184,8 @@ left:10px;
  display: flex;
     flex-wrap: wrap;
     gap:10px;
-    margin-top:10vh;
-    margin-bottom: 10vh;
+    margin-top:15vh;
+    margin-bottom: 15vh;
 }
 .container2divs{
     width:13vw;
@@ -249,17 +249,49 @@ left:10px;
     width:100%;
     height:100%;
 }
+/* .container4 */
+.container4{
+    height:13vh;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    margin-top: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container4img{
+    background-color: rgb(167, 103, 103);
+    min-width:6vw;
+    height:13vh;
+}
+.container4 hr{
+    width: 100%;
+}
+.container4 img{
+    width: 100%;
+    height:100%;
+
+}
+.container4dis{
+    text-align: center;
+}
 
 @media  (max-width:467px){
+    /* navbar */
     nav{
         height:auto;
         display:list-item;
+        position: inherit;
+    }
+    .navlogo{
+        height:12vh;
+        width:40vw;
     }
     .navli1{
         margin-left: 10px;
     }
     .navimg2{
-        width:20px;
+        width:50px;
     }
     .button1 span{
         font-size: 7px;
@@ -276,22 +308,45 @@ left:10px;
         font-size: 6px;
     }
     .button1{
-        min-width:20vw;
+        min-width:40vw;
         
     }
+    /* container1 */
     .carousel-item img {
         height: 40vh; /* Adjust the height as needed */
         object-fit: cover; /* Ensure images fill the area without distortion */
         width: 100%;
     }
+    /* container2 */
     .container2divs{
         width:15vw;
         height:10vh;
-        margin:10px
+        margin:10px;
+    }
+    /* container3 */
+    .container3{
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    }
+    .container3divs1{
+        width: 70vw;
+        margin:30px 0px 30px 70px;
+    }
+    .container3divs2{
+        width:50vw;
+        height:30vh;
+    }
+    .container3divs3{
+        width:40vw;
+        height:30vh;
     }
 
 }
 @media(min-width:470px) and (max-width:867px){
+    /* navbar */
     nav{
         height:auto;
         display:list-item;
@@ -319,25 +374,39 @@ left:10px;
         font-size: 7px;
     }
     .button1{
-        min-width:20vw;
+        min-width:30vw;
         height:auto;
-    }
-    .carousel-item img {
-        height: 40vh; /* Adjust the height as needed */
-        object-fit: cover; /* Ensure images fill the area without distortion */
-        width: 100%;
     }
     .navlogo{
         height:7vh;
         width:10vw;
         margin-left:0px;
     }
+    /* container1 */
+    .carousel-item img {
+        height: 40vh; /* Adjust the height as needed */
+        object-fit: cover; /* Ensure images fill the area without distortion */
+        width: 100%;
+    }
+    /* container2 */
     .container2divs{
         width:20vw;
         height:22vh;
         margin:10px
     }
-
+    /* container3 */
+    .container3divs1{
+        width: 70vw;
+        margin:30px 0px 30px 70px;
+    }
+    .container3divs2{
+        width:40vw;
+        height:30vh;
+    }
+    .container3divs3{
+        width:40vw;
+        height:30vh;
+    }
     }
 
 
