--- a/weekly_task/alen_solly/css/style.css
+++ b/weekly_task/alen_solly/css/style.css
@@ -316,6 +316,135 @@ left:10px;
     background-color:BLACK ;
     border:1px solid rgb(0, 140, 255);
 }
+/* container6 */
+.container6{
+    height:100vh;
+    background-color: rgb(32, 65, 102);
+    width:100%;
+    color:yellow;
+}
+.container6divs{
+    height:80vh;
+    min-width:20vw;
+    background-color: rgb(32, 65, 102);
+}
+.container6divs2{
+    display: flex;
+    overflow-y: hidden;
+    gap:20px;
+    margin-left: 20px;
+    /* margin-top:10px; */
+}
+.container6divs1{
+    text-align: center;
+    padding:20px;
+}
+.container6divs2::-webkit-scrollbar {
+    width: 5px;
+    height: 3px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(246, 255, 0);
+    border-radius: 10px;
+  }
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(255, 242, 0);
+  }
+  .container6divsdis{
+    background-color: rgb(32, 65, 102);
+    height: 25%;
+    width:100%;
+  }
+  .container6divs img{
+    width: 100%;
+    height: 75%;
+  }
+  .c6dtext{
+    color:white;
+    gap:10px;
+    display: flex;
+    margin: 5px;
+  }
+  .c6spn1{
+    text-decoration: line-through;
+  }
+  .c6spn2{
+    color: rgb(237, 74, 101);
+  }
+  .c6round{
+    border: 1px solid white;
+    background-color: blue;
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
+  }
+  /* container7 */
+  .container7{
+    height:auto;
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .container7divs11{
+    height:60vh;
+    width:40vw;
+    background-color: rgb(32, 65, 102);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  .container7divs11 img{
+    height:100%;
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  .container7dis1{
+    height:75vh;
+    width:40vw;
+    background-color: #0E3051;
+    margin-left: 30px;
+    border-radius:5px;
+  }
+  .c711{
+    width:5vw;
+    height:13vh;
+    background-color: #0E3051;
+  }
+  .c712{
+    width:20vw;
+    height:10vh;
+    background-color: #0E3051;
+  }
+  .container7dis{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6px;
+    color:white;
+  }
+  .c711 img{
+    width: 100%;
+    height:100%;
+    border-radius: 0px;
+  }
+  .container7divs2{
+    height:75vh;
+    width:54vw;
+    background-color: #0E3051;
+    margin-left: 20px;
+    border-radius:5px;
+    overflow-y: hidden;
+  }
+  .c7d2divs{
+    width:20vw;
+    height:75vh;
+    background-color: aqua;
+  }
 
 
 @media  (max-width:467px){
@@ -331,6 +460,7 @@ left:10px;
     }
     .navli1{
         margin-left: 10px;
+        font-size: 10px;
     }
     .navimg2{
         width:50px;
@@ -394,6 +524,11 @@ left:10px;
         width:20vw;
         left:10vw;
         top:40vh;
+    }
+    /* container6 */
+    .container6divs{
+        height:60vh;
+        min-width:40vw;
     }
 
 }
@@ -468,6 +603,10 @@ left:10px;
         width:20vw;
         left:10vw;
         top:40vh;
+    }
+    .container6divs{
+        height:80vh;
+        min-width:30vw;
     }
     }
 
