--- a/weekly_task/sempakam/css/about.css
+++ b/weekly_task/sempakam/css/about.css
@@ -32,15 +32,14 @@ body{
 }
 
 
-.container2::after {
+.container2::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    width: 40%;
+    width: 100%;
     height: 100%;
-    background: linear-gradient(to left, rgba(60,20,10,255), rgba(0, 0, 0, 0.5)); 
-    z-index: -1; 
+    background: linear-gradient(to right, rgba(60,20,10,1), rgba(0, 0, 0, 0.5)); 
 }
 
 .container2 img {
